# APVectorDB

./: CMakeLists.txt  Makefile  README.md  vcpkg.json
doc/: vector_database_learning.md
src/: main.cpp
